--- a/carcoordinator.html
+++ b/carcoordinator.html
@@ -42,7 +42,7 @@
 </script>
 <body onload = "setName()">
     <?php require 'webpage.php';?> 
-	<div class = "sitename"><img src = "logo2.png" alt = "Car Coordinator Logo"></div>
+	<div class = "sitename"><img src = "betterwheels2.png" alt = "Car Coordinator Logo"></div>
 	<div class = "bar"><span class = "item" onclick = "goToProf()" >My Profile</span><span class = "item" onclick = "goToEvents()">Events</span><span class = "item" onclick = "newEvent()">New Event</span><span class = "item" onclick = "logout()">Logout</span></div>
 	<div class = "main" id = "main"> Welcome, <span id = "name"></span><br>
     User Car Coordinator to plan carpooling for events!</div>
