--- a/carcoordinator.html
+++ b/carcoordinator.html
@@ -36,8 +36,7 @@
         window.location.replace("editProfile.php");
     }
     function logout(){
-        document.write(' <?php unset($_SESSION); ?>');
-        window.location.replace("loginCode.php");
+        window.location.replace("logout.php");
     }
 </script>
 <body onload = "setName()">
